--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "foundation": "~5.5.2",
+    "normalize.css": "~3.0.3",
+    "jquery": "~2.1.4"
+  }
 }
