--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "foundation": "~5.5.2",
     "normalize.css": "~3.0.3",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "foundation-icon-fonts": "*"
   }
 }
