--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "foundation": "~5.5.2",
     "normalize.css": "~3.0.3",
     "jquery": "~2.1.4",
-    "foundation-icon-fonts": "*"
+    "foundation-icon-fonts": "*",
+    "polymer": "Polymer/polymer#^1.0.0"
   }
 }
